Added a dummy chat with rule based keyword answers