@@ -2,7 +2,6 @@ package org.example.safecircle_backend.common.exception;
 
 import jakarta.servlet.http.HttpServletRequest;
 import org.example.safecircle_backend.common.dto.ApiErrorResponse;
-import org.springframework.context.MessageSource;
 import org.springframework.http.HttpStatus;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ExceptionHandler;
@@ -10,17 +9,9 @@ import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
 
 import java.time.Instant;
-import java.util.HashMap;
-import java.util.Map;
 
 @RestControllerAdvice
 public class GlobalExceptionHandler{
-
-    private final MessageSource messageSource;
-
-    public GlobalExceptionHandler(MessageSource messageSource) {
-        this.messageSource = messageSource;
-    }
 
     @ResponseStatus(HttpStatus.BAD_REQUEST)
     @ExceptionHandler(value={IllegalArgumentException.class})
@@ -41,7 +32,7 @@ public class GlobalExceptionHandler{
         String message = "Validation Failed";
 
         if(ex.getBindingResult().getFieldErrors().isEmpty()){
-            var fieldErrors = ex.getBindingResult().getFieldErrors().get(0);
+            var fieldErrors = ex.getBindingResult().getFieldErrors().getFirst();
             message = fieldErrors.getField() + " : " + fieldErrors.getDefaultMessage();
         }
 
